@@ -1,0 +1,5 @@
+#ifndef _G3TOG4DEBUG_
+#define _G3TOG4DEBUG_ 1
+#include "globals.hh"
+G4int G3toG4Debug = 0;
+#endif
